[project]
name = "uno"
description = "ComfyUI nodes for UNO model."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["accelerate==1.1.1", "deepspeed==0.14.4", "einops==0.8.0", "transformers==4.43.3", "huggingface-hub", "diffusers==0.30.1", "sentencepiece==0.2.0", "gradio==5.22.0", "--extra-index-url https://download.pytorch.org/whl/cu124", "torch==2.4.0", "torchvision==0.19.0"]

[project.urls]
Repository = "https://github.com/Yuan-ManX/ComfyUI-UNO"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-UNO"
Icon = ""
